--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "cycyBell",
 	"descripton": "Understanding of the nodeJs environment",
+	"keywords": ["freecodecamp", "react", "relay"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
