--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
 	"author": "cycyBell",
 	"descripton": "Understanding of the nodeJs environment",
 	"keywords": ["freecodecamp", "react", "relay"],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
+	
 	},
 	"main": "server.js",
 	"scripts": {
